virtual thread + 3.2